--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
 
     <body>
-        <h1>赵今麦太美了！</h1>
+        <h1>赵今麦太美了</h1>
         <img src="images/赵今麦.jpg" alt="赵今麦">
-        <p><a href="https://www.bilibili.com/">我要做赵今麦的狗</a></p>
+        <p><a href="https://weibo.com/zhaojinmaiangel">我要做赵今麦的狗</a></p>
         <p><button>做狗</button></p>
         <script src="scripts/main.js" defer></script>
     </body>
