--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE HTML>
 <htlm>
-
     <head>
         <meta charset="utf-8">
+        <meta name="description" content="赵今麦你带我走吧没有你我怎么活">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" >
         <title>赵今麦我爱你</title>
         <link href="styles/style.css" rel="stylesheet">
 
@@ -10,7 +12,7 @@
     <body>
         <h1>赵今麦太美了</h1>
         <img src="images/赵今麦.jpg" alt="赵今麦">
-        <p><a href="https://weibo.com/zhaojinmaiangel">我要做赵今麦的狗</a></p>
+        <p><a href="https://weibo.com/zhaojinmaiangel" title="赵今麦的微博" target="_blank">我要做赵今麦的狗</a></p>
         <p><button>做狗</button></p>
         <script src="scripts/main.js" defer></script>
     </body>
